# okane

./: .gitignore  README.md  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/memory/constitutions/: bicep.md  python.md
config/: default_websites.json
specs/001-crawl-cashflow-pdfs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-crawl-cashflow-pdfs/checklists/: requirements.md
specs/001-crawl-cashflow-pdfs/contracts/: cli-interface.md  config-schema.json  metadata-schema.json
src/okane/: __init__.py
src/okane/cli/: __init__.py  crawl.py  main.py
src/okane/models/: __init__.py  config.py  metadata.py  website.py
src/okane/services/: __init__.py  crawler.py  downloader.py  scraper.py  storage.py
